# Duck

./: .gitmodules  CMakeLists.txt
Duck/: CMakeLists.txt  Duck.cpp  Duck.h
app/: CMakeLists.txt
app/src/: App.cpp  App.h  Bspline.cpp  Bspline.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Duck.cpp  Duck.h  Square.cpp  Square.h  Texture.cpp  Texture.h  main.cpp
engine/: CMakeLists.txt
engine/include/engine/: Renderable.h  Renderer.ipp  Shader.h  ShaderBuilder.h  VertexArray.h  VertexArray.ipp  VertexAttribLayout.h  VertexBuffer.h  VertexData.h  VertexLayout.h
engine/src/: Shader.cpp  ShaderBuilder.cpp
engine/src/utils/: GlCall.cpp
resources/shaders/: cube.frag  default.vert  duck.frag  duck.vert  water.frag  water.vert
src/App/: main.cpp
